# vj

./: .gitignore  main.py  pyproject.toml
scripts/: record.py
src/vj/: __init__.py  assistant.py  tools.py  utils.py
src/vj/agent/: __init__.py  middleware.py
src/vj/evals/: stt_eval.ipynb  utils.py
src/vj/log_utils/: __init__.py  config.json  formatters.py
src/vj/voice/: base.py  vad.py  wwd.py
src/vj/voice/stt/: __init__.py  moonshine.py  parakeet.py  whisper.py
tests/test_agent/: test_middleware.py
