[project]
name = "vj"
version = "0.1.0"
description = "Fast and 100% local Voice AI assistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "ai-edge-litert>=2.1.0",
    "dotenv>=0.9.9",
    "langchain>=1.2.0",
    "langchain-core>=1.2.5",
    "langchain-ollama>=1.0.1",
    "onnx-asr>=0.10.0",
    "pysilero-vad>=3.0.1",
    "pywhispercpp>=1.4.0",
    "silero-vad>=6.2.0",
    "sounddevice>=0.5.3",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "wikipedia>=1.4.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"
default = false

[dependency-groups]
dev = [
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "optuna>=4.6.0",
    "optuna-dashboard>=0.20.0",
    "pymicro-features>=2.0.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
